Attempt to repair PartialReparseTest
Test has a fairly high failure rate, investigation showed that
it had multiple issues. Fixing those does seem to improve stability,
however, likely does not fix the underlying race condition. With the
changes applied, 1 out of of 50 local runs failed.

But what is more important: the test is hopefully working correctly now

issues fixed:

'code.replaceFirst("^", "")' was used by accident. This method expects
regexps and won't have the desired effect. This essentially means
that the first parsing run had always javac errors since the test code
contained '^' characters.

The second parsing run, which did replace the injected snippet had
and off-by-one copy/paste mistake in one of the doRun methods.

But since the first run was already wrong, the result of reparse run
didn't really matter since both were compared - that is also why the
missing semicolon wasn't noticed in testAnonymousFullReparse2() or
the double escaped newline character in testAnonymous().

other:

 - more asserts added to exclude potential document update issues
 - enabled a previously disabled test case